[metadata]
name = beo
version = 0.0.1
license = LICENSE
description = A living repo about medical image analysis
long_description = file: README.md
author = <Author name>
classifiers=
   Programming Language :: Python
   Topic :: Scientific/Engineering :: Artificial Intelligence
   Topic :: Scientific/Engineering :: Image Processing
   Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   nibabel

[options.packages.find]
where=src